--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,9 @@
 </head>
 
 <body class="mat-typography">
-  <app-root></app-root>
+  <app-root>
+    <router-outlet></router-outlet>
+  </app-root>
 </body>
 
 </html>
